--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,5 +1,8 @@
-form{
-    width: 100vw;
+.container{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 .title-box{
     text-align: center;
@@ -13,7 +16,7 @@ form{
     border: 1px solid aquamarine;
     padding: 30px;
     box-shadow: 1px 0px 7px black;
-    margin-top: 100px;
+
 }
 label{
     font-size: 20px;
@@ -24,7 +27,7 @@ label{
 input{
     width: 100%;
     height: 40px;
-    
+    margin-top: 15px;
 }
 .card{
     margin: 30px 0;
@@ -39,6 +42,9 @@ button{
     background-color: aquamarine!important;
     text-transform:uppercase ;
     font-size: 18px;
+    padding: 10px 30px;
+    border: 1px solid aquamarine;
+    border-radius: 10px;
 }
 button:hover{
     border: 1px solid rgb(36, 169, 125)!important
