--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -55,6 +55,10 @@
     height: 40px;
     background-color: #ebebeb;
     text-align: center;
-    padding-top: 10px;
+    padding: 5px 0px;
     border-radius: 10px;
+}
+.user a img{
+    width: 100%;
+    height: 100%;
 }
