--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,6 +4,9 @@
     width: 100%;
     height: 100px;
     border-bottom: 1px solid #ebebeb;
+    position: fixed;
+    z-index: 9;
+    background: #222A37;
 }
 .logo{
     width: 10%;
