--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     width: 100%;
     height: 100px;
-    border-bottom: 1px solid #ebebeb;
+    border-bottom: 1px solid #5e5e5e;
     position: fixed;
     z-index: 9;
     background: #222A37;
@@ -60,6 +60,9 @@
     text-align: center;
     padding: 5px 0px;
     border-radius: 10px;
+}
+.user a{
+    padding-left: 5px;
 }
 .user a img{
     width: 100%;
