--- a/src/pages/User/content.css
+++ b/src/pages/User/content.css
@@ -2,7 +2,12 @@
     width: 100%;
 }
 .content table{
-    width: 100%;
+    width: 95%;
+    border: 1px solid #333;
+    margin: auto;
+    border-radius: 26px;
+    overflow: hidden;
+    background: #222A37;
 }
 .content table tr{
     border-bottom: 1px solid #6e6e6e;
@@ -21,7 +26,7 @@
 }
 .plus{
     text-align: right;
-    padding: 30px 100px;
+    padding: 30px 125px;
 }
 .tooltip {
     position: relative;
